# nature-mat-mod-labs

./: lab1.py  lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb  lab_5.ipynb  lab_6.ipynb  lab_7.ipynb  lab_8.ipynb  lab_9.ipynb  pyproject.toml
data/: Beta_Данные температуры воды поверхности Балтийского моря 2001-2010.xlsx  CTD_22oc11_Channel+river.csv  data.txt  mpo86181.102
data/data_co2/: filtered_data.csv  regression_result.csv
data/data_co2/may/: 50000301_02.05.2023 00.00.00.csv  50000301_03.05.2023 00.00.00.csv  50000301_04.05.2023 00.00.00.csv  50000301_06.05.2023 00.00.00.csv  50000301_07.05.2023 00.00.00.csv  50000301_08.05.2023 00.00.00.csv  50000301_09.05.2023 00.00.00.csv  50000301_10.05.2023 00.00.00.csv  50000301_11.05.2023 00.00.00.csv  50000301_12.05.2023 00.00.00.csv  50000301_13.05.2023 00.00.00.csv  50000301_14.05.2023 00.00.00.csv  50000301_15.05.2023 00.00.00.csv  50000301_16.05.2023 00.00.00.csv  50000301_17.05.2023 00.00.00.csv  50000301_18.05.2023 00.00.00.csv  50000301_19.05.2023 00.00.00.csv  50000301_20.05.2023 00.00.00.csv  50000301_21.05.2023 20.00.00.csv  50000301_22.05.2023 00.00.00.csv  50000301_23.05.2023 00.00.00.csv  50000301_25.05.2023 00.00.00.csv  50000301_27.05.2023 00.00.00.csv  50000301_29.05.2023 00.00.00.csv  50000301_31.05.2023 00.00.00.csv
data/data_co2/meteoMay/: 60000301_2023.04.28_19.00.00.csv  60000301_2023.05.02_07.05.00.csv  60000301_2023.05.21_19.05.00.csv
data/практические/ДДЗ/временные ряды по данным SST/: SST_Pathfinder.pal  Описание.docx
data/практические/мат_методы/: data.txt
(+37 files in other folders)
